--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -36,7 +36,7 @@
 /docs/security-testing-orchestration/ @douglas-j-bothwell
 
 # CCM Docs
-/docs/cloud-cost-management/ @rdsoze
+/docs/cloud-cost-management/ @rdsoze @navaneeth @Rohit-Kaliki 
 
 # CET Docs
 /docs/continuous-error-tracking/ @SudheendraKatte
