--- a/docs/chaos-engineering/technical-reference/chaos-faults/aws/static/manifests/ecs-task-scale/task-replicas.yaml
+++ b/docs/chaos-engineering/technical-reference/chaos-faults/aws/static/manifests/ecs-task-scale/task-replicas.yaml
@@ -1,4 +1,4 @@
-# stop the tasks of an ECS cluster
+# scale the tasks of an ECS cluster
 apiVersion: litmuschaos.io/v1alpha1
 kind: ChaosEngine
 metadata:
@@ -8,16 +8,9 @@ spec:
   annotationCheck: "false"
   chaosServiceAccount: litmus-admin
   experiments:
-  - name: ecs-task-stop
+  - name: ecs-task-scale
     spec:
       components:
         env:
-        # provide the name of ECS cluster
-        - name: CLUSTER_NAME
-          value: 'demo'
-        - name: TASK_REPLICA_ID
-          vale: '1b751cf956e34e54b9d83b6a5c067f60,20d5041c044941dfb2126f1722d10558'
-        - name: REGION
-          value: 'us-east-1'
-        - name: TOTAL_CHAOS_DURATION
-          VALUE: '60'
+        - name: REPLICAS
+          vale: '5'
