--- a/docs/chaos-engineering/technical-reference/chaos-faults/aws/static/manifests/ecs-task-scale/task-service-name.yaml
+++ b/docs/chaos-engineering/technical-reference/chaos-faults/aws/static/manifests/ecs-task-scale/task-service-name.yaml
@@ -15,9 +15,5 @@ spec:
         # provide the name of ECS cluster
         - name: CLUSTER_NAME
           value: 'demo'
-        - name: SERVICE_NAME
-          vale: 'test-svc'
-        - name: REGION
-          value: 'us-east-1'
-        - name: TOTAL_CHAOS_DURATION
-          VALUE: '60'
+        - name: SERVICE_NAMES
+          vale: 'svc1,svc2'
