--- a/docs/chaos-engineering/technical-reference/chaos-faults/aws/static/manifests/ecs-task-scale/task-service-name.yaml
+++ b/docs/chaos-engineering/technical-reference/chaos-faults/aws/static/manifests/ecs-task-scale/task-service-name.yaml
@@ -16,4 +16,4 @@ spec:
         - name: CLUSTER_NAME
           value: 'demo'
         - name: SERVICE_NAMES
-          vale: 'svc1,svc2'
+          value: 'svc1,svc2'
