--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -39,10 +39,10 @@
 /docs/cloud-cost-management/ @rdsoze @navaneeth @Rohit-Kaliki 
 
 # CET Docs
-/docs/continuous-error-tracking/ @SudheendraKatte
+/docs/continuous-error-tracking/ @sunilgupta-harness
 
 # SRM Docs
-/docs/service-reliability-management/ @SudheendraKatte
+/docs/service-reliability-management/ @sunilgupta-harness
 
 # Chaos Docs
 /docs/chaos-engineering/ @neelanjan00 @SmritiSatya
@@ -83,7 +83,7 @@ release-notes/cloud-cost-management.md @rdsoze
 release-notes/chaos-engineering.md @neelanjan00 @SmritiSatya
 
 #CET Release Notes
-release-notes/continuous-error-tracking.md @SudheendraKatte
+release-notes/continuous-error-tracking.md @sunilgupta-harness
 
 #CI Release Notes
 release-notes/continuous-integration.md @aimurphy
@@ -107,7 +107,7 @@ release-notes/security-testing-orchestration.md @douglas-j-bothwell
 release-notes/self-managed-enterprise-edition.md @brian-f-harness @harishkammanahalli
 
 #SRM Release Notes
-release-notes/service-reliability-management.md @SudheendraKatte
+release-notes/service-reliability-management.md @sunilgupta-harness
 
 #SSCA Release Notes
 release-notes/service-reliability-management.md @sunilgupta-harness
@@ -127,7 +127,7 @@ release-notes/service-reliability-management.md @sunilgupta-harness
 /tutorials/cloud-costs/ @rdsoze 
 
 # CET Tutorials
-/tutorials/error-tracking/ @SudheendraKatte 
+/tutorials/error-tracking/ @sunilgupta-harness 
 
 # FF Tutorials
 /tutorials/feature-flags/ @ethangj 
@@ -151,6 +151,6 @@ release-notes/service-reliability-management.md @sunilgupta-harness
 /tutorials/self-managed-enterprise-edition/ @brian-f-harness
 
 # SRM Tutorials
-/tutorials/service-reliability/ @SudheendraKatte
+/tutorials/service-reliability/ @sunilgupta-harness
 
 
