--- a/docs/chaos-engineering/technical-reference/chaos-faults/aws/static/manifests/ecs-task-scale/task-service-name.yaml
+++ b/docs/chaos-engineering/technical-reference/chaos-faults/aws/static/manifests/ecs-task-scale/task-service-name.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       components:
         env:
-        # provide the name of ECS cluster
+        # provide the number of replicas
         - name: CLUSTER_NAME
           value: 'demo'
         - name: SERVICE_NAMES
