adds docs for breaking lci changes
Signed-off-by: neelanjan00 <neelanjan.manna@harness.io>

--- a/docs/chaos-engineering/technical-reference/chaos-faults/linux/static/manifests/linux-process-kill/process-command.yaml
+++ b/docs/chaos-engineering/technical-reference/chaos-faults/linux/static/manifests/linux-process-kill/process-command.yaml
@@ -8,4 +8,4 @@ metadata:
 spec:
   processKillChaos/inputs:
     processCommand: "/usr/lib64/thunderbird/thunderbird"
-    duration: 30
+    duration: 30s
