--- a/docs/chaos-engineering/technical-reference/chaos-faults/linux/static/manifests/linux-service-restart/self-healing-services.yaml
+++ b/docs/chaos-engineering/technical-reference/chaos-faults/linux/static/manifests/linux-service-restart/self-healing-services.yaml
@@ -9,4 +9,4 @@ spec:
   serviceRestartChaos/inputs:
     services: "apache2,nginx"
     selfHealingServices: true
-    duration: 30
+    duration: 30s
