--- a/docs/chaos-engineering/technical-reference/chaos-faults/cloud-foundry/static/manifests/cf-app-stop/skipSSLValidation.yaml
+++ b/docs/chaos-engineering/technical-reference/chaos-faults/cloud-foundry/static/manifests/cf-app-stop/skipSSLValidation.yaml
@@ -7,7 +7,7 @@ metadata:
     name: app-stop
 spec:
   cfAppStop/inputs:
-    duration: 30
+    duration: 30s
     cfDeploymentPlatform: vSphere
     app: cf-app
     organization: dev-org
