--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "harness-developer-hub",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "license": "MIT",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start --host 0.0.0.0",
-    "build": "export NODE_OPTIONS=--max-old-space-size=6096 && docusaurus build",
+    "build": "export NODE_OPTIONS=--max-old-space-size=7096 && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -15,7 +15,7 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
     "lint:eslint": "eslint ./src/**/*.js*",
-    "lint:ci": "export NODE_OPTIONS=--max-old-space-size=6096 && npm run lint:eslint && npm run lint:textlint",
+    "lint:ci": "export NODE_OPTIONS=--max-old-space-size=7096 && npm run lint:eslint",
     "test": "npm run lint:ci"
   },
   "dependencies": {
