--- a/docs/chaos-engineering/technical-reference/chaos-faults/ssh/static/manifests/ssh-chaos/abort-script-path.yaml
+++ b/docs/chaos-engineering/technical-reference/chaos-faults/ssh/static/manifests/ssh-chaos/abort-script-path.yaml
@@ -1,4 +1,3 @@
-# provide number of users for loadgen
 apiVersion: litmuschaos.io/v1alpha1
 kind: ChaosEngine
 metadata:
@@ -7,11 +6,9 @@ spec:
   engineState: "active"
   chaosServiceAccount: litmus-admin
   experiments:
-  - name: locust-loadgen-chaos
+  - name: ssh-chaos
     spec:
       components:
         env:
-        - name: USERS
-          value: '100'
-        - name: HOST
-          value: 'https://www.google.com'
+        - name: ABORT_SCRIPT_PATH
+          value: /tmp/abort-script/abort-script.sh
